@@ -1,0 +1,54 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.0" package="HepData"/>
+  <dataPointSet name="d01-x01-y01" dimension="2" path="/REF/LHCB_2010_I867355" title="SIG IN MUB" >
+    <dataPoint>
+      <measurement value="2.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="29.0" errorPlus="3.9" errorMinus="3.9"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="3.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="28.8" errorPlus="2.4" errorMinus="2.4"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="4.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="12.2" errorPlus="2.0" errorMinus="2.0"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="5.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="5.3" errorPlus="2.0" errorMinus="2.0"/>
+    </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d01-x01-y02" dimension="2" path="/REF/LHCB_2010_I867355" title="SIG IN MUB" >
+    <dataPoint>
+      <measurement value="2.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="34.5" errorPlus="4.6" errorMinus="4.6"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="3.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="34.3" errorPlus="2.9" errorMinus="2.9"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="4.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="14.5" errorPlus="2.4" errorMinus="2.4"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement value="5.5" errorPlus="0.5" errorMinus="0.5"/>
+      <measurement value="6.3" errorPlus="2.4" errorMinus="2.4"/>
+    </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d02-x01-y01" dimension="2" path="/REF/LHCB_2010_I867355" title="SIG IN MUB" >
+    <dataPoint>
+      <measurement value="4.0" errorPlus="2.0" errorMinus="2.0"/>
+      <measurement value="75.3" errorPlus="14.076931483814219" errorMinus="14.076931483814219"/>
+    </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d02-x01-y02" dimension="2" path="/REF/LHCB_2010_I867355" title="SIG IN MUB" >
+    <dataPoint>
+      <measurement value="4.0" errorPlus="2.0" errorMinus="2.0"/>
+      <measurement value="89.6" errorPlus="16.769317219254933" errorMinus="16.769317219254933"/>
+    </dataPoint>
+  </dataPointSet>
+</aida>
+
