@@ -24,6 +24,8 @@
 
 	* Added ATLAS_2012_I1188891 analysis
 
+	* Added LHCB_2010_I867355 analysis
+
 	* Added TGraphErrors support to root2flat
 
 2012-11-27  Andy Buckley  <andy.buckley@cern.ch>
